--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,19 +3,17 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/cosmetics?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: root
-    password: j6k2bn@759153
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
+    url: jdbc:h2:tcp://localhost/~/demo
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
   jpa:
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-    show-sql: true
     hibernate:
-      dialect: org.hibernate.dialect.MySQLDialect
       ddl-auto: create
-      format_sql: true
+    properties:
+      hibernate:
+        #globally_quoted_identifiers: true
+        format_sql: true
 
 logging:
   level:
